[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/ground/tanah.png" type="Texture" id=1]
[ext_resource path="res://assets/ground/clouds foreground.png" type="Texture" id=2]
[ext_resource path="res://assets/ground/clouds background.png" type="Texture" id=3]
[ext_resource path="res://assets/gui/playbutton.png" type="Texture" id=4]
[ext_resource path="res://homescreen/floor1.gd" type="Script" id=5]
[ext_resource path="res://homescreen/awanhitam1.gd" type="Script" id=6]
[ext_resource path="res://homescreen/awanhitam2.gd" type="Script" id=7]
[ext_resource path="res://homescreen/awanputih1.gd" type="Script" id=8]
[ext_resource path="res://homescreen/awanputih2.gd" type="Script" id=9]
[ext_resource path="res://assets/font/04b_30/04B_30__.TTF" type="DynamicFontData" id=10]
[ext_resource path="res://assets/karakter/DinoSprites - doux.png" type="Texture" id=11]
[ext_resource path="res://homescreen/homescreen.gd" type="Script" id=12]
[ext_resource path="res://homescreen/Control.gd" type="Script" id=13]
[ext_resource path="res://assets/gui/pencet.png" type="Texture" id=14]
[ext_resource path="res://assets/gui/credit.png" type="Texture" id=15]
[ext_resource path="res://assets/gui/exit.png" type="Texture" id=16]
[ext_resource path="res://assets/gui/panel.png" type="Texture" id=17]
[ext_resource path="res://assets/gui/silang.png" type="Texture" id=18]
[ext_resource path="res://assets/music/Pickup_00.wav" type="AudioStream" id=19]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 10 )

[sub_resource type="Animation" id=2]
resource_name = "dinoberdiri"
loop = true
step = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("animasidino:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "huruf"

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 10 )

[node name="homescreen" type="Node2D"]
script = ExtResource( 12 )
__meta__ = {
"_edit_vertical_guides_": [ 410.796 ]
}

[node name="awanbiru" type="Sprite" parent="."]
position = Vector2( -559.034, -208.087 )
scale = Vector2( 1.00693, 1.44482 )
texture = ExtResource( 3 )
offset = Vector2( 1061.42, 250.362 )

[node name="awanhitam1" type="Sprite" parent="."]
modulate = Color( 0.854902, 0.854902, 0.854902, 0.666667 )
position = Vector2( -1264.76, -37.6276 )
scale = Vector2( 1.42639, 1.79142 )
texture = ExtResource( 2 )
offset = Vector2( 1061.42, 250.362 )
script = ExtResource( 6 )

[node name="awanhitam2" type="Sprite" parent="."]
modulate = Color( 0.854902, 0.854902, 0.854902, 0.666667 )
position = Vector2( -452.526, -37.9728 )
scale = Vector2( 1.56852, 1.80679 )
texture = ExtResource( 2 )
offset = Vector2( 1061.42, 250.362 )
script = ExtResource( 7 )

[node name="awanputih1" type="Sprite" parent="."]
position = Vector2( -63.4639, 152.671 )
scale = Vector2( 2, 2.13898 )
texture = ExtResource( 2 )
offset = Vector2( 1061.42, 250.362 )
script = ExtResource( 8 )

[node name="awanputih2" type="Sprite" parent="."]
visible = false
position = Vector2( -328.271, 121.601 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
offset = Vector2( 1061.42, 250.362 )
script = ExtResource( 9 )

[node name="floor" type="StaticBody2D" parent="."]
position = Vector2( -1061.42, -250.362 )

[node name="floor1" type="Sprite" parent="floor"]
position = Vector2( 1820.61, 845.19 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="floor"]
wait_time = 10.0
autostart = true

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="animasidino" type="Sprite" parent="."]
position = Vector2( 477.668, 46.0349 )
scale = Vector2( 4, 4 )
texture = ExtResource( 11 )
hframes = 24

[node name="dino" type="Label" parent="."]
modulate = Color( 0.984314, 0.964706, 0.964706, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = 517.427
margin_top = 19.2762
margin_right = 686.427
margin_bottom = 164.276
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.894118, 0.266667, 0.917647, 1 )
custom_colors/font_outline_modulate = Color( 0.14902, 0.305882, 0.419608, 1 )
text = "NO
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="d" type="Label" parent="."]
modulate = Color( 0.984314, 0.964706, 0.964706, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = 379.403
margin_top = 20.3172
margin_right = 527.403
margin_bottom = 165.317
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.894118, 0.266667, 0.917647, 1 )
custom_colors/font_outline_modulate = Color( 0.14902, 0.305882, 0.419608, 1 )
text = "D	
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jump" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 382.116
margin_top = 95.2935
margin_right = 650.115
margin_bottom = 240.294
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.533333, 0.164706, 0.898039, 1 )
custom_colors/font_outline_modulate = Color( 0.14902, 0.305882, 0.419608, 1 )
text = "DASH
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dinoberdiri = SubResource( 2 )
anims/huruf = SubResource( 3 )

[node name="Control" type="Control" parent="."]
margin_left = -559.034
margin_top = -208.087
margin_right = -519.034
margin_bottom = -168.087
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="highscore" type="Label" parent="Control"]
margin_left = 882.317
margin_top = 377.77
margin_right = 1290.32
margin_bottom = 448.77
custom_fonts/font = SubResource( 4 )
text = "HighScore:  "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Control"]
visible = false
margin_left = 765.227
margin_top = 514.836
margin_right = 1357.23
margin_bottom = 585.836
custom_fonts/font = SubResource( 4 )
text = "press space to play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play" type="Button" parent="Control"]
visible = false
margin_left = 922.508
margin_top = 522.704
margin_right = 1174.51
margin_bottom = 559.704
custom_fonts/font = SubResource( 5 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play2" type="TouchScreenButton" parent="Control"]
position = Vector2( 967.126, 485.779 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 4 )
pressed = ExtResource( 14 )

[node name="credit" type="TouchScreenButton" parent="Control"]
position = Vector2( 967.126, 573.779 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 15 )
pressed = ExtResource( 14 )

[node name="exit" type="TouchScreenButton" parent="Control"]
position = Vector2( 967.126, 659.779 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 16 )
pressed = ExtResource( 14 )

[node name="creditscene" type="VBoxContainer" parent="Control"]
visible = false
margin_left = 1064.7
margin_top = 554.224
margin_right = 1104.7
margin_bottom = 594.224
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/creditscene"]
scale = Vector2( 0.884403, 0.884403 )
texture = ExtResource( 17 )

[node name="silang" type="TouchScreenButton" parent="Control/creditscene/Sprite"]
position = Vector2( 237.173, -179.45 )
scale = Vector2( 0.496347, 0.496347 )
normal = ExtResource( 18 )

[node name="audio" type="Node" parent="."]

[node name="pilih" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource( 19 )
volume_db = -6.71

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 513.041, 300.279 )
[connection signal="timeout" from="floor/Timer" to="floor/floor1" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="awanputih1" method="_on_Timer_timeout"]
[connection signal="pressed" from="Control/play2" to="." method="_on_play2_pressed"]
[connection signal="released" from="Control/play2" to="." method="_on_play2_released"]
[connection signal="pressed" from="Control/credit" to="." method="_on_credit_pressed"]
[connection signal="released" from="Control/credit" to="." method="_on_credit_released"]
[connection signal="released" from="Control/exit" to="." method="_on_exit_released"]
[connection signal="pressed" from="Control/creditscene/Sprite/silang" to="." method="_on_silang_pressed"]
